# audioplayer

./: readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hgz/audioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  WIPlaystatus.cpp  WIQueue.cpp  WlAudio.cpp  WlCallJava.cpp  WlFFmpeg.cpp  WlPlayStatus.cpp  WlPlaystatus.cpp  WlQueue.cpp  WlVideo.cpp  native-lib.cpp
app/src/main/cpp/include/: AndroidLog.h  WIPlaystatus.h  WIQueue.h  WlAudio.h  WlCallJava.h  WlFFmpeg.h  WlPlaystatus.h  WlQueue.h  WlVideo.h
app/src/main/java/com/hgz/audioplayer/: MainActivity.java  WlTimeInfoBean.java
app/src/main/java/com/hgz/audioplayer/listener/: WlOnLoadListener.java  WlOnPauseResumeListener.java  WlOnPreparedListener.java  WlOnTimeInfoListener.java
app/src/main/java/com/hgz/audioplayer/log/: MyLog.java
app/src/main/java/com/hgz/audioplayer/opengl/: WlGLSurfaceView.java  WlRender.java  WlShaderUtil.java
app/src/main/java/com/hgz/audioplayer/player/: WlPlayer.java
app/src/main/java/com/hgz/audioplayer/util/: WlTimeUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hgz/audioplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
